--- a/QuizAppV2/src/main/resources/schoolexc/quizappv2/question.fxml
+++ b/QuizAppV2/src/main/resources/schoolexc/quizappv2/question.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -10,36 +12,49 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="schoolexc.quizappv2.QuestionController">
-   <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Subject" text="QUAN LY CAU HOI" />
-      <TextArea fx:id="txtContent" prefHeight="36.0" prefWidth="580.0" promptText="Noi dung cau hoi" />
-      <HBox prefHeight="35.0" prefWidth="580.0" styleClass="Main">
+<ScrollPane styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="schoolexc.quizappv2.QuestionController">
+   <content>
+      <VBox styleClass="Main">
          <children>
-            <ComboBox fx:id="cbCates" prefWidth="150.0" promptText="Danh muc" />
-            <ComboBox fx:id="cbLevels" prefWidth="150.0" promptText="Muc do" />
-         </children>
-      </HBox>
-      <VBox fx:id="vboxChoice" prefHeight="61.0" prefWidth="580.0">
-         <children>
-            <HBox prefHeight="31.0" prefWidth="580.0" styleClass="Main">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Subject" text="QUAN LY CAU HOI" />
+            <TextArea fx:id="txtContent" prefHeight="36.0" prefWidth="580.0" promptText="Noi dung cau hoi" />
+            <HBox prefHeight="35.0" prefWidth="580.0" styleClass="Main">
                <children>
-                  <RadioButton mnemonicParsing="false">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="toggleChoice" />
-                     </toggleGroup></RadioButton>
-                  <TextField />
+                  <ComboBox fx:id="cbCates" prefWidth="150.0" promptText="Danh muc" />
+                  <ComboBox fx:id="cbLevels" prefWidth="150.0" promptText="Muc do" />
                </children>
             </HBox>
-            <HBox layoutX="10.0" layoutY="10.0" prefHeight="31.0" prefWidth="580.0" styleClass="Main">
+            <VBox fx:id="vboxChoice" prefHeight="61.0" prefWidth="580.0">
                <children>
-                  <RadioButton mnemonicParsing="false" toggleGroup="$toggleChoice" />
-                  <TextField />
+                  <HBox prefHeight="31.0" prefWidth="580.0" styleClass="Main">
+                     <children>
+                        <RadioButton mnemonicParsing="false">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="toggleChoice" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <TextField />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="31.0" prefWidth="580.0" styleClass="Main">
+                     <children>
+                        <RadioButton mnemonicParsing="false" toggleGroup="$toggleChoice" />
+                        <TextField />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <Button mnemonicParsing="false" onAction="#moreChoice" styleClass="Button" text="Them lua chon" />
+            <Button mnemonicParsing="false" onAction="#handleQuestion" styleClass="Button" text="Them cau hoi" />
+            <HBox styleClass="Main">
+               <children>
+                  <TextField fx:id="txtSearch" promptText="Tim kiem..." />
+                  <ComboBox fx:id="cbSearchCates" prefWidth="150.0" />
+                  <ComboBox fx:id="cbSearchLevels" layoutX="305.0" layoutY="20.0" prefWidth="150.0" />
                </children>
             </HBox>
+            <TableView fx:id="tbQuestion" prefHeight="217.0" prefWidth="502.0" />
          </children>
       </VBox>
-      <Button mnemonicParsing="false" onAction="#moreChoice" styleClass="Button" text="Them lua chon" />
-      <Button mnemonicParsing="false" onAction="#handleQuestion" styleClass="Button" text="Them cau hoi" />
-   </children>
-</VBox>
+   </content>
+</ScrollPane>
